# VitaSwitch

./: CMakeLists.txt  LICENSE  README.md  main.c
sce_sys/livearea/contents/: template.xml
